--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
   </head>
   <body>
     <div class="container">
-      <h1>Weather App</h1>
+      <h1>
+        New York 
+      </h1>
+<ul>
+  <li> Friday 05:00</li>
+  <li>Clear</li>
+</ul>
     </div>
     <script src="src/app.js"></script>
   </body>
