--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
         <li> Friday 05:00</li>
         <li>Clear</li>
       </ul>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Clear"/>
+          12°C | °F
+        </div>
+        <div class="col-md-6">
+          <ul>
+            <li>Precipitation: 3%</li>
+            <li>Humidity: 92%</li>
+            <li>Wind: 8 km/h</li>
+          </ul>
+
+        </div>
+      </div>
+  
     </div>
     <script src="src/app.js"></script>
   </body>
