--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <li>Clear</li>
       </ul>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-6">
           <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Clear"/>
           12°C | °F
         </div>
-        <div class="col-md-6">
+        <div class="col-6">
           <ul>
             <li>Precipitation: 3%</li>
             <li>Humidity: 92%</li>
