--- a/index.html
+++ b/index.html
@@ -20,28 +20,36 @@
   </head>
   <body>
     <div class="container">
-      <h1>
-        New York 
-      </h1>
-      <ul>
-        <li> Friday 05:00</li>
-        <li>Clear</li>
-      </ul>
-      <div class="row">
-        <div class="col-6">
-          <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Clear"/>
-          12°C | °F
-        </div>
-        <div class="col-6">
-          <ul>
-            <li>Precipitation: 3%</li>
-            <li>Humidity: 92%</li>
-            <li>Wind: 8 km/h</li>
-          </ul>
-
+      <div class="weather-app">
+        <h1>New York</h1>
+        <ul>
+          <li>Friday 05:00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+              alt="Clear"
+            />
+            12°C | °F
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation: 3%</li>
+              <li>Humidity: 92%</li>
+              <li>Wind: 8 km/h</li>
+            </ul>
+          </div>
         </div>
       </div>
-  
+      <small>
+        <a
+          href="https://github.com/katya3008/vanilla-weather-app.git"
+          target="_blank"
+          >Open-source code</a
+        >, by Katya Sher
+      </small>
     </div>
     <script src="src/app.js"></script>
   </body>
