--- a/index.html
+++ b/index.html
@@ -17,26 +17,28 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>New York</h1>
-        <ul>
-          <li>Friday 05:00</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-              alt="Clear"
-            />
-            12°C | °F
-          </div>
-          <div class="col-6">
-            <ul>
-              <li>Precipitation: 3%</li>
-              <li>Humidity: 92%</li>
-              <li>Wind: 8 km/h</li>
-            </ul>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <h1>New York</h1>
+          <ul>
+            <li>Friday 05:00</li>
+            <li>Clear</li>
+          </ul>
+          <div class="row">
+            <div class="col-6">
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                alt="Clear"
+              />
+              12°C | °F
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitation: 3%</li>
+                <li>Humidity: 92%</li>
+                <li>Wind: 8 km/h</li>
+              </ul>
+            </div>
           </div>
         </div>
         <small>
