--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
                 <img src="" alt="Clear" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong>
-                  <span class="units">°C | °F</span>
+                  <span class="units">
+                    <a href="#" id="celsius-link" class="active">°C</a> 
+                    |
+                    <a href="#" id="fahrenheit-link">°F</a></span
+                  >
+                  </span>
                 </div>
               </div>
             </div>
