--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <input
                     type="submit"
                     value="search"
-                    class="btn btn-primary w-100"
+                    class="btn btn-outline-dark"
                   />
                 </div>
               </div>
