--- a/index.html
+++ b/index.html
@@ -52,12 +52,7 @@
                 <img src="" alt="Clear" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong>
-                  <span class="units">
-                    <a href="#" id="celsius-link" class="active">°C</a> 
-                    |
-                    <a href="#" id="fahrenheit-link">°F</a></span
-                  >
-                  </span>
+                  <span class="units"> °C </span>
                 </div>
               </div>
             </div>
@@ -66,7 +61,7 @@
                 <li>Humidity:<span id="humidity"></span>%</li>
                 <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
-</div>
+            </div>
           </div>
           <div class="weather-forecast" id="forecast"></div>
         </div>
